--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="max-width">
 
                 <figure>
-                    <img src="/Assets/foto perfil/Captura de tela 2025-04-05 005327.png" alt="Rafael Falaschi">
+                    <img src="/Assets/foto perfil/foto perfil.jpg" alt="Rafael Falaschi">
                 </figure>
 
                 <h2>
@@ -75,7 +75,7 @@
 
                 <section class="content">
                     <figure>
-                        <img src="/Assets/foto perfil/Captura de tela 2025-04-05 005327.png" alt="Rafael Falaschi">
+                        <img src="/Assets/foto perfil/foto perfil.jpg" alt="Rafael Falaschi">
                     </figure>
 
                     <div>
