--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="max-width">
 
                 <figure>
-                    <img src="/Assets/foto perfil/foto perfil.jpg" alt="Rafael Falaschi">
+                    <img src="/assets/foto perfil/foto perfil.jpg" alt="Rafael Falaschi">
                 </figure>
 
                 <h2>
@@ -58,7 +58,7 @@
                 <p>Desenvolvedor <span>Front-end</span></p>
 
                 <div>
-                    <a href="/Assets/curriculo/RAFAEL FALASCHI.pdf" download="Curriculo_Rafael_Falaschi.pdf">
+                    <a href="/assets/curriculo/RAFAEL FALASCHI.pdf" download="Curriculo_Rafael_Falaschi.pdf">
                         <i class="fas fa-download"></i> Download CV
                     </a>
                     <a href="mailto:rafinhabraga2324@gmail.com">
@@ -74,7 +74,7 @@
 
                 <section class="content">
                     <figure>
-                        <img src="/Assets/foto perfil/foto perfil.jpg" alt="Rafael Falaschi">
+                        <img src="/assets/foto perfil/foto perfil.jpg" alt="Rafael Falaschi">
                     </figure>
 
                     <div>
@@ -128,17 +128,17 @@
                 <ul class="cards-skills">
                     <li class="box-skills">
                         <p>HTML5</p>
-                        <img src="/Assets/linguagens de programacao/html5.png" alt="html5">
+                        <img src="/assets/linguagens de programacao/html5.png" alt="html5">
                     </li>
 
                     <li class="box-skills">
                         <p>CSS3</p>
-                        <img src="/Assets/linguagens de programacao/css-3.png" alt="css3">
+                        <img src="/assets/linguagens de programacao/css-3.png" alt="css3">
                     </li>
 
                     <li class="box-skills">
                         <p>JAVASCRIPT</p>
-                        <img src="/Assets/linguagens de programacao/js.png" alt="javascript">
+                        <img src="/assets/linguagens de programacao/js.png" alt="javascript">
                     </li>
                 </ul>
             </div>
@@ -154,7 +154,7 @@
 
                         <div class="slide">
                             <figure class="image-project">
-                                <img src="/Assets/projetos/site arquitetura.png" alt="projeto arquitetura">
+                                <img src="/assets/projetos/site arquitetura.png" alt="projeto arquitetura">
                             </figure>
 
                             <article>
@@ -165,12 +165,12 @@
                                 <ul class="language-produced">
                                     <li>
                                         <p>HTML5</p>
-                                        <img src="/Assets/linguagens de programacao/html-origi (2).png" alt="html5">
+                                        <img src="/assets/linguagens de programacao/html-origi (2).png" alt="html5">
                                     </li>
 
                                     <li>
                                         <p>CSS3</p>
-                                        <img src="/Assets/linguagens de programacao/css-origi.png" alt="css3">
+                                        <img src="/assets/linguagens de programacao/css-origi.png" alt="css3">
                                     </li>
                                 </ul>
                             </article>
@@ -180,7 +180,7 @@
 
                         <div class="slide">
                             <figure class="image-project">
-                                <img src="/Assets/projetos/site arquitetura.png" alt="projeto arquitetura">
+                                <img src="/assets/projetos/site arquitetura.png" alt="projeto arquitetura">
                             </figure>
 
                             <article>
@@ -191,12 +191,12 @@
                                 <ul class="language-produced">
                                     <li>
                                         <p>HTML5</p>
-                                        <img src="/Assets/linguagens de programacao/html-origi (2).png" alt="html5">
+                                        <img src="/assets/linguagens de programacao/html-origi (2).png" alt="html5">
                                     </li>
 
                                     <li>
                                         <p>CSS3</p>
-                                        <img src="/Assets/linguagens de programacao/css-origi.png" alt="css3">
+                                        <img src="/assets/linguagens de programacao/css-origi.png" alt="css3">
                                     </li>
                                 </ul>
                             </article>
@@ -204,7 +204,7 @@
 
                         <div class="slide">
                             <figure class="image-project">
-                                <img src="/Assets/projetos/site arquitetura.png" alt="projeto arquitetura">
+                                <img src="/assets/projetos/site arquitetura.png" alt="projeto arquitetura">
                             </figure>
 
                             <article>
@@ -214,12 +214,12 @@
                                 <ul class="language-produced">
                                     <li>
                                         <p>HTML5</p>
-                                        <img src="/Assets/linguagens de programacao/html-origi (2).png" alt="html5">
+                                        <img src="/assets/linguagens de programacao/html-origi (2).png" alt="html5">
                                     </li>
 
                                     <li>
                                         <p>CSS3</p>
-                                        <img src="/Assets/linguagens de programacao/css-origi.png" alt="css3">
+                                        <img src="/assets/linguagens de programacao/css-origi.png" alt="css3">
                                     </li>
                                 </ul>
                             </article>
