--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio | Rafael Falaschi</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
     <!--Font awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet"
@@ -48,7 +48,7 @@
             <div class="max-width">
 
                 <figure>
-                    <img src="/assets-t/foto perfil/foto perfil.jpg" alt="Rafael Falaschi">
+                    <img src="/assets/foto perfil/foto perfil.jpg" alt="Rafael Falaschi">
                 </figure>
 
                 <h2>
@@ -74,7 +74,7 @@
 
                 <section class="content">
                     <figure>
-                        <img src="/assets-t/foto perfil/foto perfil.jpg" alt="Rafael Falaschi">
+                        <img src="/assets/foto perfil/foto perfil.jpg" alt="Rafael Falaschi">
                     </figure>
 
                     <div>
@@ -128,17 +128,17 @@
                 <ul class="cards-skills">
                     <li class="box-skills">
                         <p>HTML5</p>
-                        <img src="/assets-t/linguagens de programacao/html5.png" alt="html5">
+                        <img src="/assets/linguagens de programacao/html5.png" alt="html5">
                     </li>
 
                     <li class="box-skills">
                         <p>CSS3</p>
-                        <img src="/assets-t/linguagens de programacao/css-3.png" alt="css3">
+                        <img src="/assets/linguagens de programacao/css-3.png" alt="css3">
                     </li>
 
                     <li class="box-skills">
                         <p>JAVASCRIPT</p>
-                        <img src="/assets-t/linguagens de programacao/js.png" alt="javascript">
+                        <img src="/assets/linguagens de programacao/js.png" alt="javascript">
                     </li>
                 </ul>
             </div>
@@ -154,7 +154,7 @@
 
                         <div class="slide">
                             <figure class="image-project">
-                                <img src="/assets-t/projetos/site arquitetura.png" alt="projeto arquitetura">
+                                <img src="/assets/projetos/site arquitetura.png" alt="projeto arquitetura">
                             </figure>
 
                             <article>
@@ -165,12 +165,17 @@
                                 <ul class="language-produced">
                                     <li>
                                         <p>HTML5</p>
-                                        <img src="/assets-t/linguagens de programacao/html-origi (2).png" alt="html5">
+                                        <img src="/assets/linguagens de programacao/html-origi (2).png" alt="html5">
                                     </li>
 
                                     <li>
                                         <p>CSS3</p>
-                                        <img src="/assets-t/linguagens de programacao/css-origi.png" alt="css3">
+                                        <img src="/assets/linguagens de programacao/css-origi.png" alt="css3">
+                                    </li>
+
+                                    <li>
+                                        <p>JAVASCRIPT</p>
+                                        <img src="/assets/linguagens de programacao/js-origi.png" alt="Js">
                                     </li>
                                 </ul>
                             </article>
@@ -180,23 +185,28 @@
 
                         <div class="slide">
                             <figure class="image-project">
-                                <img src="/assets-t/projetos/site arquitetura.png" alt="projeto arquitetura">
+                                <img src="/assets/projetos/site-santos.png" alt="projeto Santos-sp">
                             </figure>
 
                             <article>
                                 <h3>Portfólio desenvolvido para arquitetura.</h3>
                                 <p>Construi o site por completo atráves do figma pedido pelo cliente.</p>
-                                <a href="#" target="_blank">Ver projeto</a>
+                                <a href="/assets/projetos/santos-sp/index.html" target="_blank">Ver projeto</a>
 
                                 <ul class="language-produced">
                                     <li>
                                         <p>HTML5</p>
-                                        <img src="/assets-t/linguagens de programacao/html-origi (2).png" alt="html5">
+                                        <img src="/assets/linguagens de programacao/html-origi (2).png" alt="html5">
                                     </li>
 
                                     <li>
                                         <p>CSS3</p>
-                                        <img src="/assets-t/linguagens de programacao/css-origi.png" alt="css3">
+                                        <img src="/assets/linguagens de programacao/css-origi.png" alt="css3">
+                                    </li>
+
+                                    <li>
+                                        <p>JAVASCRIPT</p>
+                                        <img src="/assets/linguagens de programacao/js-origi.png" alt="Js">
                                     </li>
                                 </ul>
                             </article>
@@ -204,7 +214,7 @@
 
                         <div class="slide">
                             <figure class="image-project">
-                                <img src="/assets-t/projetos/site arquitetura.png" alt="projeto arquitetura">
+                                <img src="/assets/projetos/site arquitetura.png" alt="projeto arquitetura">
                             </figure>
 
                             <article>
@@ -214,12 +224,17 @@
                                 <ul class="language-produced">
                                     <li>
                                         <p>HTML5</p>
-                                        <img src="/assets-t/linguagens de programacao/html-origi (2).png" alt="html5">
+                                        <img src="/assets/linguagens de programacao/html-origi (2).png" alt="html5">
                                     </li>
 
                                     <li>
                                         <p>CSS3</p>
-                                        <img src="/assets-t/linguagens de programacao/css-origi.png" alt="css3">
+                                        <img src="/assets/linguagens de programacao/css-origi.png" alt="css3">
+                                    </li>
+
+                                    <li>
+                                        <p>JAVASCRIPT</p>
+                                        <img src="/assets/linguagens de programacao/js-origi.png" alt="Js">
                                     </li>
                                 </ul>
                             </article>
