--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="max-width">
 
                 <figure>
-                    <img src="assets/foto perfil/foto perfil.jpg" alt="Rafael Falaschi">
+                    <img src="./assets/foto perfil/foto perfil.jpg" alt="Rafael Falaschi">
                 </figure>
 
                 <h2>
@@ -60,7 +60,7 @@
                 <p>Desenvolvedor <span>Front-end</span></p>
 
                 <div>
-                    <a href="assets-t/curriculo/RAFAEL FALASCHI.pdf" download="Curriculo_Rafael_Falaschi.pdf">
+                    <a href="./assets-t/curriculo/RAFAEL FALASCHI.pdf" download="Curriculo_Rafael_Falaschi.pdf">
                         <i class="fas fa-download"></i> Download CV
                     </a>
                     <a href="mailto:rafinhabraga2324@gmail.com">
@@ -76,7 +76,7 @@
 
                 <section class="content">
                     <figure>
-                        <img src="assets/foto perfil/foto perfil.jpg" alt="Rafael Falaschi">
+                        <img src="./assets/foto perfil/foto perfil.jpg" alt="Rafael Falaschi">
                     </figure>
 
                     <div>
@@ -130,17 +130,17 @@
                 <ul class="cards-skills">
                     <li class="box-skills">
                         <p>HTML5</p>
-                        <img src="assets/linguagens de programacao/html5.png" alt="html5">
+                        <img src="./assets/linguagens de programacao/html5.png" alt="html5">
                     </li>
 
                     <li class="box-skills">
                         <p>CSS3</p>
-                        <img src="assets/linguagens de programacao/css-3.png" alt="css3">
+                        <img src="./assets/linguagens de programacao/css-3.png" alt="css3">
                     </li>
 
                     <li class="box-skills">
                         <p>JAVASCRIPT</p>
-                        <img src="assets/linguagens de programacao/js.png" alt="javascript">
+                        <img src="./assets/linguagens de programacao/js.png" alt="javascript">
                     </li>
                 </ul>
             </div>
@@ -156,7 +156,7 @@
 
                         <div class="slide">
                             <figure class="image-project">
-                                <img src="assets/projetos/site arquitetura.png" alt="projeto arquitetura">
+                                <img src="./assets/projetos/site arquitetura.png" alt="projeto arquitetura">
                             </figure>
 
                             <article>
@@ -167,17 +167,17 @@
                                 <ul class="language-produced">
                                     <li>
                                         <p>HTML5</p>
-                                        <img src="assets/linguagens de programacao/html-origi (2).png" alt="html5">
+                                        <img src="./assets/linguagens de programacao/html-origi (2).png" alt="html5">
                                     </li>
 
                                     <li>
                                         <p>CSS3</p>
-                                        <img src="assets/linguagens de programacao/css-origi.png" alt="css3">
+                                        <img src="./assets/linguagens de programacao/css-origi.png" alt="css3">
                                     </li>
 
                                     <li>
                                         <p>JAVASCRIPT</p>
-                                        <img src="assets/linguagens de programacao/js-origi.png" alt="Js">
+                                        <img src="./assets/linguagens de programacao/js-origi.png" alt="Js">
                                     </li>
                                 </ul>
                             </article>
@@ -187,28 +187,28 @@
 
                         <div class="slide">
                             <figure class="image-project">
-                                <img src="assets/projetos/site-santos.png" alt="projeto Santos-sp">
+                                <img src="./assets/projetos/site-santos.png" alt="projeto Santos-sp">
                             </figure>
 
                             <article>
                                 <h3>Portfólio desenvolvido para arquitetura.</h3>
                                 <p>Construi o site por completo atráves do figma pedido pelo cliente.</p>
-                                <a href="assets/projetos/santos-sp/index.html" target="_blank">Ver projeto</a>
+                                <a href="./assets/projetos/santos-sp/index.html" target="_blank">Ver projeto</a>
 
                                 <ul class="language-produced">
                                     <li>
                                         <p>HTML5</p>
-                                        <img src="assets/linguagens de programacao/html-origi (2).png" alt="html5">
+                                        <img src="./assets/linguagens de programacao/html-origi (2).png" alt="html5">
                                     </li>
 
                                     <li>
                                         <p>CSS3</p>
-                                        <img src="assets/linguagens de programacao/css-origi.png" alt="css3">
+                                        <img src="./assets/linguagens de programacao/css-origi.png" alt="css3">
                                     </li>
 
                                     <li>
                                         <p>JAVASCRIPT</p>
-                                        <img src="assets/linguagens de programacao/js-origi.png" alt="Js">
+                                        <img src="./assets/linguagens de programacao/js-origi.png" alt="Js">
                                     </li>
                                 </ul>
                             </article>
@@ -216,7 +216,7 @@
 
                         <div class="slide">
                             <figure class="image-project">
-                                <img src="assets/projetos/site arquitetura.png" alt="projeto arquitetura">
+                                <img src="./assets/projetos/site arquitetura.png" alt="projeto arquitetura">
                             </figure>
 
                             <article>
@@ -226,17 +226,17 @@
                                 <ul class="language-produced">
                                     <li>
                                         <p>HTML5</p>
-                                        <img src="assets/linguagens de programacao/html-origi (2).png" alt="html5">
+                                        <img src="./assets/linguagens de programacao/html-origi (2).png" alt="html5">
                                     </li>
 
                                     <li>
                                         <p>CSS3</p>
-                                        <img src="assets/linguagens de programacao/css-origi.png" alt="css3">
+                                        <img src="./assets/linguagens de programacao/css-origi.png" alt="css3">
                                     </li>
 
                                     <li>
                                         <p>JAVASCRIPT</p>
-                                        <img src="assets/linguagens de programacao/js-origi.png" alt="Js">
+                                        <img src="./assets/linguagens de programacao/js-origi.png" alt="Js">
                                     </li>
                                 </ul>
                             </article>
@@ -275,7 +275,7 @@
         </section> <!--Rodapé-->
     </footer> <!--Rodape-->
 
-    <script src="scripts.js"></script>
+    <script src="./scripts.js"></script>
 </body>
 
 </html>
