Resolvido conflito no link do styles.css

--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
                             </figure>
 
                             <article>
-                                <h3>Portfólio desenvolvido para arquitetura.</h3>
-                                <p>Construi o site por completo atráves do figma pedido pelo cliente.</p>
+                                <h3>Portfólio Arquitetura.</h3>
+                                <p>Portfolio criado para demonstrar um pouco do trabalho do cliente.</p>
                                 <a href="#" target="_blank">Ver projeto</a>
 
                                 <ul class="language-produced">
@@ -191,8 +191,8 @@
                             </figure>
 
                             <article>
-                                <h3>Portfólio desenvolvido para arquitetura.</h3>
-                                <p>Construi o site por completo atráves do figma pedido pelo cliente.</p>
+                                <h3>Cidade de Santos-Sp</h3>
+                                <p>Uma bela cidade no litoral de são paulo, com varios pontos turisticos incriveis.</p>
                                 <a href="./assets/projetos/santos-sp/index.html" target="_blank">Ver projeto</a>
 
                                 <ul class="language-produced">
