--- a/assets/projetos/santos-sp/index.html
+++ b/assets/projetos/santos-sp/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=menu" />
-    <link rel="stylesheet" href="/assets/projetos/santos-sp/header.css">
+    <link rel="stylesheet" href="./assets/projetos/santos-sp/header.css">
 
 </head>
 
@@ -52,7 +52,7 @@
 
                 <article class="ponto-turism">
                     <figure>
-                        <img src="assets/imagens/jardin-de-orla.jpg" alt="jardim de orla">
+                        <img src="./assets/imagens/jardin-de-orla.jpg" alt="jardim de orla">
                     </figure>
 
                     <div>
@@ -90,13 +90,13 @@
                     </div>
 
                     <figure>
-                        <img src="assets/imagens/porto-santos.jpg" alt="Porto de Santos">
+                        <img src="./assets/imagens/porto-santos.jpg" alt="Porto de Santos">
                     </figure>
                 </article>
 
                 <article class="ponto-turism">
                     <figure>
-                        <img src="assets/imagens/monte-serrat.jpg" alt="Monte Serrat">
+                        <img src="./assets/imagens/monte-serrat.jpg" alt="Monte Serrat">
                     </figure>
 
                     <div>
@@ -138,7 +138,7 @@
                     </div>
 
                     <figure>
-                        <img src="assets/imagens/vila-belmiro.png" alt="Vila Belmiro">
+                        <img src="./assets/imagens/vila-belmiro.png" alt="Vila Belmiro">
                     </figure>
                 </article>
             </div>
